# nautilus-telemetry

./: README.md  docker-compose.yml
backend/telemetry-service/: .env  Cargo.toml  Dockerfile
backend/telemetry-service/.sqlx/: query-18ae658cbbc4eba90ebed3b81919b28e81b3f5b9cdbbd50157f965d60866ac1e.json  query-287270bb7dbb874120fddf96eef76e35946e8e1ad7a7d59f82b0a828eacbcfa7.json  query-2a853fd24e1bcf18229cf12f4bfa5696d7e12a54cc2bdf3309b151b64cc12c01.json  query-386f4cebbbe3a09ac305681ad910537c539032a41b3bc25b1b027283ef16c4e7.json  query-40f0a90b144d4f5bcdfda2bba1c49ac73750b33bd6a67a0e37f62fea95206bc8.json  query-4d34eca49bfd5950b5f081952f33ed9f9472204d7d28a1975d35009fe38b516d.json  query-5271d7bf51463e161dcdd2306e10601172a9d9b277b4f5e13fe541306f5094cd.json  query-5a3efcf280ae53c0c467249b8c2a36c6bf3a4bfd84fadff0eb7b2e1dde2530b2.json  query-67423d5166ddadc8311f408c726ffa8a81e944733a75a3d54667ed84a3e59b81.json  query-707f4eed74d13bfedbfb5eb1218f914473e946808060fb68cf686627bf461484.json  query-7356d7cc38c4c8f09aab1394b9bff322e4fa5684889b0a26c7d01a8e96c2c922.json  query-77fd50c23096ec5590cf70e0071e3ea767f1094d5cec3f810982437fd714ca06.json  query-7cba99ebb229fd243aea40a8229e8627180676b3ed54fc2220a5089b63833077.json  query-7e046668d5a90b2bca38f12af1b9ea46ce9af02696c060ace324bd2a9d58ed08.json  query-824a3e9b4f2e88995e43c614b89cd4defd8045002864278cdbf554575c8ba780.json  query-989d2d8b06f25e2da6d0cce3a7b868a49008220dd80542fba91f009606006145.json  query-d07182cae23eec403103d27ded4e08a2cbde2cf499bec0e71b646ab892245362.json  (+1 more)
backend/telemetry-service/src/: database.rs  error.rs  (+5 more)
(+26 files in other folders)
