[package]
name = "telemetry-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate","rust_decimal"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
chrono = { version = "0.4.42" , features = ["serde"]}
rust_decimal = "1.39.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
dotenv = "0.15.0"